--- a/cloth/index.html
+++ b/cloth/index.html
@@ -25,18 +25,21 @@
 	</script>
   </head>
   <body>
+	<div id="header_bg">
+		<div class="hearts_bg">
+	</div>
 	<div class="container">
-		<div class="row" id="header">
-			<div class="span12">
-				<!--<div class="logotype">Community League Of The Heights</div>
-			</div>
-			<div class="span7">-->
-				<div id="topnav">
+		<div class="row">
+			<div id="header" class="span12">
+				<div class="logotype"><img src="img/logotype.png" alt="Community League Of The Heights"></div>
+				<div class="toolbar">
 					<a id="donate" title="Donate"></a>
 					<a id="youtube" title="Youtube"></a>
 					<a id="facebook" title="Facebook"></a>
 					<div id="language">
-						<a href="#l=en" id="en" title="English">English</a>|<a href="#l=es" id="es" title="Spanish">Spanish</a>
+						<a href="#l=en" id="en" title="English">English</a>
+						|
+						<a href="#l=es" id="es" title="Spanish">Spanish</a>
 					</div>
 				</div>
 			</div>
@@ -44,7 +47,7 @@
 		<div class="row" id="navbar">
 			<div class="span3">
 				<a href="logo" id="logo">
-					<img src="img/logo2.png" alt="CLOTH">
+					<img src="img/cloth_logo.png" alt="CLOTH">
 				</a>
 			</div>
 			<div class="span9">
@@ -96,24 +99,34 @@
 					<p><em><strong>"Our doors are always open to neighbors in need."</strong></em></p>
 				</div>
 			</div>
+			
+			
 			<div class="span9">
-				<img src="photos/pantry.jpg">
+				<div class="photos slideshow">
+					<img src="photos/building.jpg" />
+					<img src="photos/grads.jpg" />
+					<img src="photos/kids.jpg" />
+					<img src="photos/pantry.jpg" />
+				</div>
 			</div>
+			
+			
 		</div>
-		<div class="row" id="footer">
-			<address>
-				500 West 159th St.
-				New York, NY 10032
-				<abbr title="Phone">P:</abbr> (212) 795-4779
-				<abbr title="Fax">F:</abbr> (212) 740-5037
-			</address>
-		</div>
-			<div class="row" id="footer2">
-			</div>
 	</div>
     
-	<!--<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<div class="row" id="footer">
+		<address>
+			500 West 159th St.
+			New York, NY 10032
+			<abbr title="Phone">P:</abbr> (212) 795-4779
+			<abbr title="Fax">F:</abbr> (212) 740-5037
+		</address>
+	</div>
+	<div class="row" id="footer2">
+	</div>
+	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/cloth.js"></script>-->
+	<script src="js/jquery.cycle.all.latest.js"></script
+	<script src="js/cloth.js"></script>
   </body>
 </html>
