--- a/cloth/index.html
+++ b/cloth/index.html
@@ -101,12 +101,12 @@
 			</div>
 			
 			
-			<div class="span9">
-				<div class="photos slideshow">
-					<img src="photos/building.jpg" />
-					<img src="photos/grads.jpg" />
-					<img src="photos/kids.jpg" />
-					<img src="photos/pantry.jpg" />
+			<div class="span9 photos">
+				<div class="slideshow">
+					<img src="photos/building.jpg" alt=""/>
+					<img src="photos/grads.jpg" alt=""/>
+					<img src="photos/kids.jpg" alt=""/>
+					<img src="photos/pantry.jpg" alt=""/>
 				</div>
 			</div>
 			
@@ -126,7 +126,7 @@
 	</div>
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.cycle.all.latest.js"></script
+	<script src="js/jquery.cycle.all.latest.js"></script>
 	<script src="js/cloth.js"></script>
   </body>
 </html>
