--- a/cloth/index.html
+++ b/cloth/index.html
@@ -26,12 +26,12 @@
   </head>
   <body>
 	<div id="header_bg">
-		<div class="hearts_bg">
+		<div class="hearts_bg"></div>
 	</div>
 	<div class="container">
 		<div class="row">
 			<div id="header" class="span12">
-				<div class="logotype"><img src="assets/img/logotype.jpg" alt="Community League Of The Heights"></div>
+				<div class="logotype"><img src="assets/img/logotype.png" alt="Community League Of The Heights"></div>
 				<div class="toolbar">
 					<a id="donate" title="Donate"></a>
 					<a id="youtube" title="Youtube"></a>
@@ -45,7 +45,7 @@
 		</div>
 		<div class="row" id="navbar">
 			<div class="span3">
-				<a href="logo" id="logo">
+				<a href="#" id="logo">
 					<img src="assets/img/cloth_logo.png" alt="CLOTH">
 				</a>
 			</div>
@@ -59,11 +59,6 @@
 					<li>
 						<a href="#">
 							Services
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							Volunteer
 						</a>
 					</li>
 					<li>
