--- a/cloth/index.html
+++ b/cloth/index.html
@@ -96,7 +96,7 @@
 			
 			
 			<div class="span9 photos">
-				<div class="slideshow">
+				<div class="slideshow2">
 					<img src="assets/photos/building.jpg" alt=""/>
 					<img src="assets/photos/grads.jpg" alt=""/>
 					<img src="assets/photos/kids.jpg" alt=""/>
